k8s/ingress/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: foodadvisor-api.k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foodadvisor-api-service
                port:
                  number: 1337
